[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/difficulty/DifficultySelection.gd" type="Script" id=1]
[ext_resource path="res://src/FadeEffect.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/background/Background.tscn" type="PackedScene" id=3]

[node name="DifficultySelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="FadeEffect" parent="." instance=ExtResource( 2 )]
node_path = NodePath("../VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.042
anchor_top = 0.269
anchor_right = 0.958
anchor_bottom = 0.894
margin_left = -0.240002
margin_top = -0.320038
margin_right = 0.239929
margin_bottom = -0.320068
size_flags_horizontal = 0
custom_constants/separation = 8
alignment = 1

[node name="Easy" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 659.0
margin_bottom = 175.0
text = "EASY"

[node name="Medium" type="Button" parent="VBoxContainer"]
margin_top = 183.0
margin_right = 659.0
margin_bottom = 278.0
text = "MEDIUM"

[node name="Hard" type="Button" parent="VBoxContainer"]
margin_top = 286.0
margin_right = 659.0
margin_bottom = 381.0
text = "HARD"

[node name="Extreme" type="Button" parent="VBoxContainer"]
margin_top = 389.0
margin_right = 659.0
margin_bottom = 484.0
text = "EXTREME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Legend" type="Button" parent="VBoxContainer"]
margin_top = 492.0
margin_right = 659.0
margin_bottom = 587.0
text = "LEGEND"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 595.0
margin_right = 659.0
margin_bottom = 615.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="GoBack" type="Button" parent="VBoxContainer"]
margin_top = 623.0
margin_right = 659.0
margin_bottom = 718.0
text = "GO_BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="VBoxContainer/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="VBoxContainer/Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="VBoxContainer/Extreme" to="." method="_on_Extreme_pressed"]
[connection signal="pressed" from="VBoxContainer/Legend" to="." method="_on_Legend_pressed"]
[connection signal="pressed" from="VBoxContainer/GoBack" to="." method="_on_GoBack_pressed"]
